--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,11 +2,14 @@ server:
   port: 8181
 spring:
   datasource:
-    url: jdbc:h2:file:C:/Users/amsid/database/temp/userdb
+    url: jdbc:h2:mem:testdb;NON_KEYWORDS=USER
     username: sa
     password:
     driverClassName: org.h2.Driver
   jpa:
+    .repositories:
+      bootstrap-mode: default
+    defer-datasource-initialization: true
     hibernate:
       ddl-auto: create-drop
     show-sql: true
